k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eyezen
  labels:
    name: eyezen
    app: eyezen-chrome-extension
